k8s/03-mysql-service.yaml
# MySQL Service - ClusterIP (internal only, backend connects to this)
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
